@@ -102,13 +102,6 @@
             <artifactId>webcam-capture</artifactId>
             <version>0.3.12</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>openjfx-monocle</artifactId>
-            <version>jdk-12.0.1+2</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -121,6 +114,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.formcoach.Main</mainClass>
+                    <options>
+                        <!-- fixes an internal access bug in javafx-media 21.0.1 -->
+                        <option>--add-opens=javafx.base/com.sun.javafx=javafx.media</option>
+                    </options>
                 </configuration>
             </plugin>
 
@@ -130,11 +127,8 @@
                 <version>3.5.4</version>
                 <configuration>
                     <argLine>
-                        -Djavafx.platform=Monocle
-                        -Dglass.platform=Monocle
-                        -Dmonocle.platform=Headless
-                        -Dprism.order=sw
                         -Djava.awt.headless=true
+                        -Dprism.order=sw
                     </argLine>
                 </configuration>
             </plugin>
